    goes wrong (no more stuck in 640x480).

    Also smoother full-screen / windowed toggle.

  - FreeDink respect local keyboard layout for keys (ALT+... shortcuts
    and custom D-Mod keys) on Windows.

  - FreeDinkedit now uses layout-independent scancodes - no longer
    searching where '[' or '`' was relocated.

  - CD-ROM support dropped.

- New translation for the engine strings in Russian
  (thanks Yuri Kozlov)


108.2
=====

* User-visible changes:

- New, simple versioning scheme, without scary .20YYMMDD date.

- Properly play Dink's intro screen music (see below).

- FreeDinkedit plays sounds on Windows.

- New translation for the engine strings in Brazilian Portuguese
  (thanks Enrico Nicoletto)

- Update translations of the engine strings
  (thanks Translation Project)

- 64-bit support for Windows.

* Developer notes:

- Properly play Dink's intro screen music: the original game actually
  tries both 3.mid and 1003.mid for playmidi("1003.mid").

- Improved build documentation.

- Display SDL audio driver in debug mode.

- Add AppStream/AppData file for GNU/Linux software centers.


1.08.20121209
=============

* User-visible changes:

- Fix game freeze when warping in some special situations, such as
  when lots of sprites are created; this bug was present in the
  original Dink (thanks Bas Wijnen)

- New translation for the engine strings in Catalan (thanks Àngel
  Mompó) and Basque (thanks Gorka Azkarate Zubiaur)

- Update translations of the engine strings (thanks Translation
  Project), including the Dutch translation which was never credited
  in this file yet (thanks Koen Torfs)


1.08.20120427
=============

* User-visible changes:

- New translations for the engine strings: Esperanto (thanks Felipe
  Castro), Slovenian (thanks Klemen Košir), Serbian (thanks Мирослав
  Николић), Croatian (thanks Tomislav Krznar).

- Fix a few bugs (see below).

* Developer notes:

- No palette conversion for dir.ff graphics in truecolor mode (bug in